ajout effectif ecoles

--- a/src/views/base.html
+++ b/src/views/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-         <header class="header py-4">
+         <header class="header py-4 d-md-flex justify-content-md-between">
             <h1 id="home" class="text-center">Gestion Sport</h1>
             <nav>
                 <ul class="nav flex-column">
@@ -22,8 +22,8 @@
         </header>
         <main>{% block main %}{% endblock %}</main>
         <footer class="footer d-flex justify-content-center align-item-center gap-4 p-4">
-            <a href="#" class="text-decoration-none">À propos</a>
-            <a href="#" class="text-decoration-none">Nous contacter</a>
+            <a href="#">À propos</a>
+            <a href="#">Nous contacter</a>
         </footer>
     </div>
 </body>
