--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,22 @@
 .card {
    background-color: #212529;
-   border-color: #484848;
    box-shadow: 0 0 5px #484848;
+   border-color: #484848;
 }
 
 .card-content {
     padding: 10px;
+}
+
+.tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.tags a:hover{
+    text-decoration: underline;
 }
 
 .school-box,
@@ -24,4 +35,8 @@
 section h2 {
     margin: 25px 0;
     font-weight: 600;
+}
+
+a {
+    text-decoration: none;
 }
