--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #212529;
 }
@@ -13,6 +19,39 @@ a {
 
 p, h1,h2,h3 {
     color: #fff!important;
+}
+
+.presentation {
+    text-align: center;
+}
+
+.details {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    gap: 0 5rem;
+}
+
+.details-info {
+    width: 10rem;
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.8rem;
+    border-radius: 100%;
+    background: linear-gradient(to top, #303030, #404040);
+}
+
+.details-info p:nth-child(1) {
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+.details-info p:nth-child(2) {
+    font-weight: 500;
+    font-style: italic;
 }
 
 .card {
@@ -48,6 +87,7 @@ p, h1,h2,h3 {
     font-size: 2rem;
     font-weight: 700;
 }
+
 
 @media (min-width:768px) {
     .school-box, .sport-box {
